<resources>
    <string name="app_name">应急指挥</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="input_key_word">请输入姓名、编号搜索</string>
    <string name="location_tips">正在定位，请稍候…</string>
    <string name="no_result">对不起，没有搜索到相关数据！</string>
    <string name="_offline_download">离线下载</string>
    <string name="_setting_title">设置</string>
    <string name="all_offline">所有城市</string>
    <string name="download_offline">下载管理</string>
    <string name="city_name">城市名称</string>
    <string name="city_size">城市大小</string>
    <string name="manageper">人员管理</string>
    <string name="security">安全监控</string>
    <string name="setting">设置</string>
    <string name="sos">sos</string>
    <string name="report">人员管理</string>
    <string name="map">离线地图</string>
    <string name="bell">铃声</string>
    <string name="shake">震动</string>
    <string name="compass">指南针</string>
    <string name="position">本机定位</string>
    <string name="time_setting">搜索时间设置</string>
    <string name="personlist">人员列表</string>
    <string name="total">本机人数:@人</string>
    <string name="all">全选</string>
    <string name="delete">删除</string>
    <string name="name">姓名:</string>
    <string name="sex">性别:</string>
    <string name="address">地址:</string>
    <string name="details">详情</string>
    <string name="sos_report">自动上报设置</string>
    <string name="anto_report">自动上报</string>
    <string name="select_report">选择上报</string>
    <string name="custom_report">信息通信</string>
    <string name="confirm">确认上报</string>
    <string name="select_sos_report">请选择上报SOS人员</string>
    <string name="report_num">编码：1234</string>
    <string name="edit">编辑</string>
    <string name="save">保存</string>
    <string name="add_details">人员录入</string>
    <string name="phone">本机联系电话:</string>
    <string name="phone2">紧急联系人2:</string>
    <string name="phone1">紧急联系人1:</string>
    <string name="per_blood">血型:</string>
    <string name="per_allergy">过敏史:</string>
    <string name="coding">编码:</string>
    <string name="register">本机注册</string>
    <string name="information">本机信息</string>
    <string name="service">救援服务方式</string>
    <string name="input_word">编码需要通过手表发送sos获得</string>
    <string name="beamsearch">定向搜索</string>
    <string name="person_status_list">人员状态表</string>
    <string name="security_title">安全监控</string>
    <string name="undetermine_title">待定区域:</string>
    <string name="persons_search">上报</string>
    <string name="auto_search">定时上报</string>
    <string name="total_persons_search">搜索功能</string>
    <string name="search_function_select">搜索功能</string>
    <string name="timer_search_note">定时上报已开启，是否退出</string>
    <string name="persons_search_function">搜救功能</string>
    <string name="fuzzy_persons_search">模糊搜救</string>
    <string name="fuzzy_plot_search">标绘</string>
    <string name="curr_location">本机定位</string>
    <string name="popup_location">当前您的(手持机)位置</string>
    <string name="note_location_fail">定位失败，请换个地方重新定位。</string>
    <string name="note_switch_location">定位开关已开启，正在定位中...</string>
    <string name="note_search_completed">指令已发出，等待响应...</string>
    <string name="note_sending_Com">正在发送指令</string>
    <string name="note_search_beginning">正在发送指令...</string>
    <string name="note_search_stop">定向搜索结束</string>
    <string name="note_input_person_note">未录入人员</string>
    <string name="note_switch_search">正在上报中</string>
    <string name="note_switch_search_close">搜救已关闭</string>
    <string name="popuphone">电话:</string>
    <string name="track">轨迹查询</string>
    <string name="mass">集结</string>
    <string name="rescue">撤退</string>
    <string name="cross">越界</string>
    <string name="act">行动</string>
    <string name="normal_order">下达指令</string>
    <string name="person_manager_add">添加</string>
    <string name="person_manager_binding">绑定</string>
    <string name="person_manager_cancel">取消</string>
    <string name="person_sex_man">男</string>
    <string name="person_sex_women">女</string>
    <string name="person_detail_save_note">人员编码信息不能为空</string>
    <string name="person_info_requried_name">姓名为必填项</string>
    <string name="person_detail_edite">编辑</string>
    <string name="person_detail_save">保存</string>
    <string name="person_deatail_cancel">取消</string>
    <string name="dialog_note_cancel">取消</string>
    <string name="dialog_note_sure">确定</string>
    <string name="dialog_note_back">数据未保存，是否退出？</string>
    <string name="person_manager_delete_note">未有选中的条目</string>
    <string name="person_manager_delete_note1">未有条目信息</string>
    <string name="_noe_receiver_signal">收到@消息</string>
    <string name="_already_update_per">已更新@人，数据已上报</string>
    <string name="_data_upload_auto_per">数据自动上报</string>
    <string name="_note_receiver_person">该人员不在人员列表中</string>
    <string name="search_watch_open_note">本机对腕表搜索需要在北斗信号覆盖范围内，
             搜索时间大概需要5分钟！通常在室内北斗信号很弱，若在室内长时间搜索不到，需要移至室外空阔地带进行搜索或者关闭搜索功能。</string>
    <string name="search_watch_close_note">搜索结束！</string>
    <string name="security_pathquery_note">数据已更新！</string>
    <string name="settings_sos">信息上报</string>
    <string name="settings_person">人员信息上报</string>
    <string name="settings_person_upload">选择人员信息上报方式</string>
    <string name="settings_wriedreport">有线网络上报</string>
    <string name="settings_wrielessreport">无线网络上报</string>
    <string name="settings_time">搜寻时间设置</string>
    <string name="settings_register">本机注册</string>
    <string name="settings_rescue">救援服务</string>
    <string name="settings_loc_info">本机信息</string>
    <string name="settings_online_map">离线地图</string>
    <string name="settings_bell">铃声</string>
    <string name="settings_vibrator">震动</string>
    <string name="settings_rescue_pattern">防火抗震</string>
    <string name="settings_storage_pattern">地图数据</string>
    <string name="settings_storage_type_outer">外置存储</string>
    <string name="settings_storage_type_inner">内置存储</string>
    <string name="settings_sos_pattern">上报模式</string>
    <string name="settings_position_statistics">上报统计</string>
    <string name="rescue_pattern_flood">防汛预警</string>
    <string name="rescue_pattern_fire">森林火警</string>
    <string name="upload_pattern_default">默认</string>
    <string name="upload_pattern_auto">自动，上限人数：@</string>
    <string name="upload_pattern_auto_input_et_fail">不能为空</string>
    <string name="settings_compass">指南针</string>
    <string name="settings_update">检查更新</string>
    <string name="settings_sync_data">更新基础数据</string>
    <string name="settings_sync_data_note">更新基础数据完成</string>
    <string name="settings_upload_service">通信服务</string>
    <string name="settings_search_map">应急指挥</string>
    <string name="setting_upload_statistics_num">上传@次</string>
    <string name="settings_back">系统退出</string>
    <string name="notify_note">此人员未录入本系统，未在地图上进行定位显示。</string>
    <string name="notify_note_cancel">我知道了</string>
    <string name="dialog_note_command_title">请选择要发送的指令</string>
    <string name="dialog_note_command_concentrate">集结</string>
    <string name="dialog_note_command_action">行动</string>
    <string name="notify_note_command_cancel">取消</string>
    <string name="dialog_note_rescue_complete">救援完成</string>
    <string name="activity_localinfo">本机信息</string>
    <string name="activity_localifo_version">版本号：1.0</string>
    <string name="activity_localifo_user_name">本机用户名：</string>
    <string name="activity_localifo_dipper_num">本机北斗号：</string>
    <string name="activity_localifo_device_num">本机设备号：</string>
    <string name="activity_localifo_loc_contact">本机联系方式：</string>
    <string name="activity_localifo_server_addr">服务器地址：</string>
    <string name="activity_localifo_register">本机注册</string>
    <string name="activity_register_user_name">本机用户名:</string>
    <string name="activity_register_dipper_num">本机北斗号:</string>
    <string name="activity_register_device_num">本机设备号:</string>
    <string name="activity_register_loc_contact">本机联系方式:</string>
    <string name="activity_register_server_addr">主服务器地址:</string>
    <string name="activity_register_commit">注册</string>
    <string name="activity_rescue_server">救援服务</string>
    <string name="activity_offline_map">离线地图</string>
    <string name="activity_offline_map_manager">管理</string>
    <string name="security_search_note">是否退出搜索？</string>
    <string name="security_system_back_note">是否退出应用？</string>
    <string name="dipper_auto_upload_switch_note">信息上报需要开启北斗，请开启北斗！</string>
    <string name="person_info_repeat_note">该人员已录入</string>
    <string name="send_command_success_note">发送成功</string>
    <string name="time_settings_hour">时</string>
    <string name="time_settings_minute">分</string>
    <string name="time_settings_second">秒</string>
    <string name="time_settings_title">搜寻时间设置</string>
    <string name="time_settings_sure">确定</string>
    <string name="time_settings_time_note">搜寻时间间隔至少大于等于1分钟</string>
    <string name="time_settings_time_back_note">数据未保存，是否退出？</string>
    <string name="time_settings_time_search_note">搜索已开启，请关闭后重新设置。</string>
    <string name="offline_map_delete_note">是否删除？</string>
    <string name="offline_map_no_data_note">未有选中数据</string>
    <string name="offline_city_map">城市地图</string>
    <string name="offline_city_map_init">城市地图初始化</string>
    <string name="offline_city_map_init_faile">加载失败</string>
    <string name="upload_sos_info_fail">上报失败，请开启北斗后重新上报</string>
    <string name="navi_fail_note">未安装导航插件！</string>
    <string name="sos_path_search_fail_note">未安装路径规划插件！</string>
    <string name="short_mess_send">发送</string>
    <string name="short_mess_send_hint">点击此处输入文本</string>
    <string name="short_mess_send_fail_note">发送内容为空</string>
    <string name="send_mess_length_note">已达到最大长度</string>
    <string name="orientation_north_note">正北</string>
    <string name="orientation_east_north_note">东北</string>
    <string name="orientation_east_note">正东</string>
    <string name="orientation_east_south_note">东南</string>
    <string name="orientation_south_note">正南</string>
    <string name="orientation_west_south_note">西南</string>
    <string name="orientation_west_note">正西</string>
    <string name="orientation_west_north_note">西北</string>
    <string name="_security_r">安全半径:</string>
    <string name="_send_command">下达指令</string>
    <string name="_security_dis">设置安全区域</string>
    <string name="ev_map_init">地图数据初始化</string>
    <string name="new_message_note">···</string>
    <string name="dipper_switch_check_note">请检查北斗开关是否开启？</string>
    <string name="dipper_card_check_note">请检查北斗卡是否插好？</string>
    <string name="progress_draw_note">正在绘制···</string>
    <string name="measure_start_point">起点</string>
    <string name="loction_lon_lat">位置定位</string>
    <string name="measure_start_lon">当前经度</string>
    <string name="plot_manager">标绘管理</string>
    <string name="plot_delete">删除</string>
    <string name="plots_load">上报</string>
    <string name="diglog_plot_title">请输入备注:</string>
    <string name="diglog_upload_upper">请输入人数上限：</string>
    <string name="diglog_input_upper_num">请输入人数上限</string>
    <string name="plot_name_note">请输入备注</string>
    <string name="dialog_cancel">取消</string>
    <string name="mesure_input_distance">输入测量</string>
    <string name="mesure_click_distance">点击测量</string>
    <string name="dialog_timer_stop">退出</string>
    <string name="total_search_msg">单次搜索信息</string>
    <string name="total_search_num">搜索次数：</string>
    <string name="total_person_num">人员总数：</string>
    <string name="total_person_success_num">通信成功数量：</string>
    <string name="total_person_fail_num">通信失败数量：</string>
    <string name="search_history">搜索历史</string>
    <string name="update_apk_title">更新</string>
    <string name="update_apk_note">发现新版本，是否更新!</string>
    <string name="dialog_update_apk">更新</string>
    <string name="net_setting">网络设置</string>
    <string name="input_net_ip">请录入网络IP</string>
    <string name="input_net_com">请录入端口号</string>
    <string name="net_com">端口：</string>
    <string name="net_ip">IP :</string>
</resources>