<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl_title_bar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/green_little"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/im_set_time_back"
            android:layout_width="54dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:background="@drawable/btn_back_state"
            android:gravity="center"
            android:paddingLeft="20dp" />

        <TextView
            android:id="@+id/tv_set_time"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:gravity="center_vertical"
            android:text="@string/net_setting"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_IP"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical"
        android:text="@string/net_ip"
        android:textSize="17sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl_title_bar" />

    <EditText
        android:id="@+id/et_ip"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginLeft="5dp"
        android:gravity="center_vertical"
        android:hint="@string/input_net_ip"
        android:paddingLeft="5dp"
        android:textSize="15sp"
        app:layout_constraintLeft_toRightOf="@id/tv_IP"
        app:layout_constraintTop_toTopOf="@id/tv_IP" />

    <TextView
        android:id="@+id/tv_com"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:text="@string/net_com"
        android:textSize="17sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_IP" />

    <EditText
        android:id="@+id/et_com"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_marginLeft="5dp"
        android:gravity="center_vertical"
        android:hint="@string/input_net_com"
        android:inputType="number"
        android:paddingLeft="5dp"
        android:textSize="15sp"
        app:layout_constraintLeft_toRightOf="@id/tv_com"
        app:layout_constraintTop_toTopOf="@id/tv_com" />

    <TextView
        android:id="@+id/tv_commit"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/bg_selector_register_commit"
        android:gravity="center"
        android:text="@string/time_settings_sure"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>