<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="240dp"
    android:background="@drawable/bg_search_rectangle">

    <TextView
        android:id="@+id/search_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/search_function_select"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <Button
        android:id="@+id/dialog_timer_search"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/search_title"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_selector_tv"
        android:text="@string/persons_search"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/dialog_total_search"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/dialog_timer_search"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_selector_tv"
        android:text="@string/auto_search"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/dialog_history"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/dialog_total_search"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_selector_tv"
        android:text="@string/search_history"
        android:textColor="@color/white"
        android:textSize="16sp" />
</RelativeLayout>