<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:background="@drawable/bg_search_rectangle">

    <TextView
        android:id="@+id/update_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/update_apk_title"
        android:textColor="@color/black"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/update_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/update_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/update_apk_note"
        android:textColor="@color/red"
        android:textSize="17sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/dialog_update"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginRight="0.5dp"
            android:layout_weight="1"
            android:background="@drawable/bg_selector_left_tv"
            android:text="@string/dialog_update_apk"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/dialog_cancel"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="0.5dp"
            android:layout_weight="1"
            android:background="@drawable/bg_selector_right_tv"
            android:text="@string/dialog_note_cancel"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>
</RelativeLayout>